# ChangeLog for dev-python/commandlineapp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Feb 2011; James Rowe <jnrowe@gmail.com> -commandlineapp-3.0.5.ebuild,
  commandlineapp-3.0.6.ebuild:
  Keyworded x86.

  18 Feb 2011; James Rowe <jnrowe@gmail.com> commandlineapp-3.0.6.ebuild:
  Keyworded amd64.

*commandlineapp-3.0.6 (19 Jan 2011)

  19 Jan 2011; James Rowe <jnrowe@gmail.com> +commandlineapp-3.0.6.ebuild:
  Version bump [255].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  23 Sep 2010; James Rowe <jnrowe@gmail.com> commandlineapp-3.0.5.ebuild:
  Keyworded x86.

  23 Sep 2010; James Rowe <jnrowe@gmail.com> commandlineapp-3.0.5.ebuild:
  Keyworded amd64.

  24 Aug 2010; James Rowe <jnrowe@gmail.com> commandlineapp-3.0.5.ebuild:
  Keyworded ~x86.

*commandlineapp-3.0.5 (24 Aug 2010)

  24 Aug 2010; James Rowe <jnrowe@gmail.com> +commandlineapp-3.0.5.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
