@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST CommandLineApp-3.0.6.tar.gz 174690 RMD160 b171eae5cbfe657cfd8963ea4484b8a2ae4dae44 SHA1 fed7e1897f79274bd0e5a81868cf8f34c6d41c2e SHA256 788ad6efdffb1bfcab92f3f060968cd852fea66d52afc41e9e8e3f727aca1785
+DIST CommandLineApp-3.0.7.tar.gz 142100 RMD160 c42202d1e9722004398762d16509859bad1f3e38 SHA1 9c5ff14b36fcdf9190efe3a283859d93db73f3d2 SHA256 1c3dc8597d95b6816d6bc5665d40fc498a8b4d8260da1a22e5c6c1f5d5258499
 EBUILD commandlineapp-3.0.6.ebuild 769 RMD160 0df1c7111bf3a7f194242f2277cacbc2ebda2dca SHA1 93356032b9674f2b0d480f47f34fca1fc5b1f44e SHA256 3eec9f99dda65c085cc0020765cc794b7cef1b887c255067ddc6d4b01c5bf5bd
-MISC ChangeLog 1007 RMD160 7a0165e6a262561033397355cb9207443693c4bb SHA1 70fc9762deff176c8a434c5e2af1613b0318e50b SHA256 dbe7490daefa10f208daf216bcc5c25fc6225d931b9bb37282513554262c269a
+EBUILD commandlineapp-3.0.7.ebuild 657 RMD160 656606dec5ece0e861f2c1ace1b511a35257f5fb SHA1 03a4530f95d50f1d3d948535231a285b06504402 SHA256 b83119363051b336b9eeb046572a6105315a1a642c6dd327e2823af42cbb2bc6
+MISC ChangeLog 1142 RMD160 983eb4c08cfdddb19244337cfdd3b3b214d9d91c SHA1 3a09285a18116f22e28a5a87d6529b10631fcffa SHA256 0642fab19dcffdf404365d1267da9155a7479539b17657ff0c6b9e96e4315184
 MISC metadata.xml 879 RMD160 a479ba4613c6b21c3b0c7e03ae4cf04d4726c188 SHA1 fcb63fc726f2c037572b95cb808653b36f5ba118 SHA256 e49ee1b2c86b7f104c4e0fc36c3b083fa70813bb26aada96479b9224336b8ce0
 MISC watch 29 RMD160 4da7fd0952387fab0a81a9fb9772aaaef2f66efd SHA1 d90eedfc398fa2de678881c42a1cbc649734255d SHA256 1d48864362609b3accbe02a98a2ab47c7e03770ea3cc4d1a56eea6046fb764a2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1eengACgkQzJrj3cAXR0m2iACeIt+tJiWCHD/DlY2Og3Wd5WPP
-tBMAoJhVO6E/pwWrF8j+tYBcZA+30Cme
-=Ndt1
+iEYEARECAAYFAk1tSmEACgkQzJrj3cAXR0n2oQCfXroBAcrHeT5mviw8/cVzA8CT
+Fp0An2M1KmVm8EPr67CtdCTbjccqS/Pe
+=r33/
 -----END PGP SIGNATURE-----
