@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
+>=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+mirror://pypi/C/CommandLineApp/CommandLineApp-3.0.7.tar.gz
+
+http://pypi.python.org/pypi/CommandLineApp/
+MIT
+Makes creating apps as simple as defining callbacks to handle options
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+test
+
+
+
+3
+
+compile install postinst postrm prepare test
+
+
+
+
+
