@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*commandlineapp-3.0.7 (01 Mar 2011)
+
+  01 Mar 2011; James Rowe <jnrowe@gmail.com> +commandlineapp-3.0.7.ebuild:
+  Version bump [296].
+
   18 Feb 2011; James Rowe <jnrowe@gmail.com> -commandlineapp-3.0.5.ebuild,
   commandlineapp-3.0.6.ebuild:
   Keyworded x86.
